Fix permission settings for QOTW submissions channel in QOTW jobs